# mq-demo

./: .gitignore  README.md
protocols/protos/: MessageQueue.proto
server/: .haskell-project  AUTHORS  INSTALL  LICENSE  MessageQueue.cabal  README  Setup.hs  prepare  shake
server/scripts/: gencode.sh  ghci  ghcopts  my-ghc  run  syncheck-all
server/src/: macros.h
server/src/lib/Mgw/: I18n.hs
server/src/lib/Mgw/I18n/: Core.hs  Main.hs
server/src/lib/Mgw/MessageQueue/: BrokerServer.hs  BrokerStub.hs  LocalBroker.hs  Protocol.hs  Tests.hs  Types.hs
server/src/lib/Mgw/Model/: XsdTypes.hs
server/src/lib/Mgw/Util/: Ansi.hs  BS.hs  BSL.hs  BaseCoding.hs  ConClasses.hs  Concurrent.hs  Conduit.hs  Config.hs  DynConfig.hs  Encoding.hs  Exception.hs  ExitAction.hs  Fail.hs  Force.hs  HasConns.hs  HasExceptions.hs  Hash.hs  IO.hs  IORef.hs  List.hs  Locations.hs  Logging.hs  MD5.hs  MVar.hs  Misc.hs  Network.hs  OSMap.hs  Option.hs  Orphans.hs  Pb.hs  Preview.hs  Process.hs  ProgName.hs  QcPropHelper.hs  STM.hs  SafeCopy.hs  Seq.hs  Setup.hs  Signals.hs  Sleep.hs  (+11 more)
server/src/lib/Mgw/Util/ExitAction/: Base.hs
server/src/lib/Mgw/Util/Logging/: Core.hs  LogClient.hs  LogConfig.hs  LogFormatting.hs  LogWriter.hs
server/src/progs/: MessageQueueRecvClient.hs  MessageQueueSendClient.hs  MessageQueueServer.hs  MessageQueueTests.hs
talk-cufp2014/: Makefile  STM.key  architektur.key  body-header.tex  email-cufp-participants.txt  header.tex  heap.key  message-broker.key  talk.txt  things-to-demonstrate.txt  wehr_cufp-2014-09.html
talk-cufp2014/code/: STM1.hs  StreamTest.hs  StreamTest2.hs  StreamTest3.hs  StreamTest4.hs
