-- NOTE: this project is NOT build via cabal. The cabal file only serves
-- to install all required packages. You can do this with the following
-- command:
--
-- $ cabal install --only-dependencies
--
-- It is recommended to use the hackage repository at
-- http://darcs.factisresearch.com/packages/ghc7.6-2014-01
-- You can do so by setting the remote-repo value in your $HOME/.cabal/config
-- file as follows:
-- remote-repo: factisresearch:http://darcs.factisresearch.com/packages/ghc7.6-2014-01
Name:                MessageQueue
Version:             0.1
Synopsis:            message queue simple projects from the checkpad project (http://checkpad.de)
License:             BSD3
Author:              see AUTHORS file
Maintainer:          factis research development <team@factisresearch.com>
Build-Type:          Custom
Cabal-Version:       >= 1.8

Library
  Build-Depends:
    ChasingBottoms == 1.3.*,
    ConfigFile == 1.1.*,
    HTF == 0.11.*,
    MaybeT == 0.1.*,
    MissingH == 1.2.*,
    QuickCheck == 2.6.*,
    SafeSemaphore == 0.10.*,
    aeson == 0.7.*,
    base == 4.7.*,
    base16-bytestring == 0.1.*,
    base64-bytestring == 1.0.*,
    binary == 0.7.*,
    blaze-builder == 0.3.*,
    bounded-tchan == 0.2.*,
    bytestring == 0.10.*,
    cereal == 0.4.*,
    containers == 0.5.*,
    cryptohash == 0.11.*,
    deepseq == 1.3.*,
    directory == 1.2.*,
    filepath == 1.3.*,
    hashable == 1.2.*,
    heaps == 0.3.*,
    hprotoc-fork == 2.0.16.*,
    hslogger == 1.2.*,
    lifted-base == 0.2.*,
    io-streams == 1.1.*,
    monad-control == 0.3.*,
    mtl == 2.1.*,
    multiset == 0.2.*,
    network == 2.4.*,
    old-locale == 1.0.*,
    old-time == 1.1.*,
    parsec == 3.1.*,
    pretty == 1.1.*,
    process == 1.2.*,
    protocol-buffers-fork == 2.0.16.*,
    random == 1.0.*,
    regex-compat == 0.95.*,
    regex-posix == 0.95.*,
    resourcet == 0.4.*,
    safe == 0.3.*,
    safecopy == 0.8.*,
    semigroups == 0.12.*,
    shake == 0.13.2,
    split == 0.2.2,
    stm == 2.4.*,
    stm-chans == 3.0.*,
    streaming-commons == 0.1.4.*,
    strict == 0.3.*,
    template-haskell == 2.9.*,
    temporary == 1.2.*,
    text == 1.1.*,
    time == 1.4.*,
    transformers == 0.3.*,
    unix == 2.7.*,
    unordered-containers == 0.2.*,
    utf8-string == 0.3.*,
    vector == 0.10.*,
    xsd == 0.4.*
